redesigned the code

--- a/asset/templates/page.html
+++ b/asset/templates/page.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>{{title}}</title>
 <link rel="icon" href="favicon.ico">
-{{{css}}}
+<style>{{{css}}}</style>
 
 <header>
   <a href="index.html">{{name}}</a>
